// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processServerElement adds children to template if slot not found 1`] = `
"<div>
      <div class="CustomElement">
    <div>content</div></div>
    </div>"
`;

exports[`processServerElement duplicates child in multiple slots with the same name 1`] = `
"<div>
      <div class="CustomElement">
      <h1>
        <div>slot1 content</div>
      </h1>
      <h2>
        <div>slot1 content</div>
      </h2>
    </div>
    </div>"
`;

exports[`processServerElement processes the js custom elements 1`] = `"<div><div>processed custom element</div></div>"`;

exports[`processServerElement replaces the element with the custom element 1`] = `"<div><div class="CustomElement">custom element content</div></div>"`;

exports[`processServerElement slot children 1`] = `
"<div>
        <div class="CustomElement">
        <div>slot1 content</div>
      </div>
      </div>"
`;

exports[`processServerElement slot children into unnamed slot 1`] = `
"<div>
      <div class="CustomElement">
      <div>slot1 content</div>
    </div>
    </div>"
`;

exports[`processServerElement uses the default value of the slot if no child is provided 1`] = `
"<div>
        <div class="CustomElement">
        <p>default slot content</p>
          And some more content
        
      </div>
      </div>"
`;
